--- a/index.html
+++ b/index.html
@@ -89,34 +89,106 @@
     </style>
 </head>
 <body>
+    <!-- CRT scanlines -->
+    <div class="scanline"></div>
 
-    <div class="title">blackdev
+    <!-- Title -->
+    <div class="title">blackdev</div>
+
+    <!-- Profile Pic / Popup Menu -->
+    <div class="profile-container">
+        <img src="profile.png" class="profile-pic" id="profilePic">
+        <div class="popup-menu" id="popupMenu">
+            <button id="signInBtn">Sign In</button>
+            <button id="settingsBtn">Settings</button>
+        </div>
     </div>
 
+    <!-- Layout container -->
     <div class="layout">
         <!-- LEFT SIDEBAR -->
-        <div class="sidebar">
+        <div class="sidebar" id="sidebar">
             <h2>Recents</h2>
-            <p>&lt;— items will go here</p>
+            <div id="recentSubcatsContainer">&lt;— items will go here</div>
+            <input type="text" placeholder="New subcategory" id="newSubcat">
+            <button id="addSubcatBtn">Add</button>
         </div>
 
         <!-- MAIN CONTENT -->
         <div class="main">
-
             <div class="section">
                 <h2>Popular Categories</h2>
-                <div class="placeholder-box"></div>
+                <div class="placeholder-box" id="popularBox"></div>
             </div>
-
             <div class="section">
                 <h2>Recommended</h2>
-                <div class="placeholder-box"></div>
+                <input type="text" placeholder="Search..." id="searchBar" style="width:100%; padding:5px; margin-bottom:10px;">
+                <div class="placeholder-box" id="recommendedBox"></div>
             </div>
-
         </div>
     </div>
 
-    <div class="scanline"></div>
+    <!-- JS -->
+    <script>
+        // Profile popup toggle
+        const profilePic = document.getElementById('profilePic');
+        const popupMenu = document.getElementById('popupMenu');
+        profilePic.addEventListener('click', () => {
+            popupMenu.style.display = popupMenu.style.display === 'block' ? 'none' : 'block';
+        });
 
+        // Sign-in system
+        let signedInUser = localStorage.getItem('username');
+        const sidebar = document.getElementById('sidebar');
+        const recentContainer = document.getElementById('recentSubcatsContainer');
+
+        function updateContent() {
+            if(signedInUser) {
+                // Show recommended box
+                document.getElementById('recommendedBox').style.display = 'block';
+
+                // Load recent subcategories
+                let recents = JSON.parse(localStorage.getItem('recentSubcats') || "[]");
+                recentContainer.innerHTML = '';
+                recents.forEach(subcat => {
+                    let p = document.createElement('p');
+                    p.textContent = subcat;
+                    recentContainer.appendChild(p);
+                });
+            } else {
+                document.getElementById('recommendedBox').style.display = 'none';
+                recentContainer.innerHTML = '&lt;— sign in to see recent subcategories';
+            }
+        }
+
+        updateContent();
+
+        document.getElementById('signInBtn').addEventListener('click', () => {
+            const username = prompt("Enter your username:");
+            if(username) {
+                signedInUser = username;
+                localStorage.setItem('username', username);
+                alert(`Welcome, ${username}!`);
+                updateContent();
+            }
+        });
+
+        // Add new subcategory
+        document.getElementById('addSubcatBtn').addEventListener('click', () => {
+            if(!signedInUser) {
+                alert("You must sign in to add subcategories!");
+                return;
+            }
+            const val = document.getElementById('newSubcat').value.trim();
+            if(val) {
+                let recents = JSON.parse(localStorage.getItem('recentSubcats') || "[]");
+                recents.push(val);
+                localStorage.setItem('recentSubcats', JSON.stringify(recents));
+                document.getElementById('newSubcat').value = '';
+                updateContent();
+            }
+        });
+    </script>
 </body>
+
 </html>
