--- a/index.html
+++ b/index.html
@@ -3,282 +3,202 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Retro Hub</title>
+<title>Blackdev Retro Hub</title>
 <style>
-    body {
-        margin: 0;
-        background: #0a0a0a;
-        font-family: "Courier New", monospace;
-        color: #e2e2e2;
-    }
-    /* CRT / retro pixel effect */
-    .scanline {
-        position: fixed;
-        inset: 0;
-        background: repeating-linear-gradient(
-            to bottom,
-            rgba(255,255,255,0.03) 0px,
-            rgba(255,255,255,0.03) 1px,
-            transparent 2px
-        );
-        pointer-events: none;
-        z-index: 999;
-    }
-    /* Title */
-    .title {
-        width: 100%;
-        text-align: center;
-        padding: 20px 0;
-        font-size: 40px;
-        letter-spacing: 10px;
-        font-weight: bold;
-        filter: blur(0.4px);
-        color: #c0c0ff;
-        text-shadow: 0 0 6px #4a4aff;
-    }
-    /* Layout container */
-    .layout {
-        display: grid;
-        grid-template-columns: 240px 1fr;
-        height: calc(100vh - 120px);
-    }
-    /* Left sidebar */
-    .sidebar {
-        border-right: 2px solid #333;
-        padding: 15px;
-        overflow-y: auto;
-    }
-    .sidebar h2 {
-        margin-top: 0;
-        font-size: 18px;
-    }
-    .sidebar a {
-        color: #9ac0ff;
-        text-decoration: none;
-        display: block;
-        margin-bottom: 5px;
-        cursor: pointer;
-    }
-    .sidebar input, .sidebar button {
-        margin-top: 5px;
-    }
-    /* Main content */
-    .main {
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        padding: 15px;
-    }
-    .section {
-        border-bottom: 2px solid #333;
-        padding: 20px;
-    }
-    .section:last-child {
-        border-bottom: none;
-    }
-    .section h2 {
-        margin-top: 0;
-        font-size: 20px;
-        color: #9ac0ff;
-    }
-    .placeholder-box {
-        width: 100%;
-        height: 100%;
-        border: 2px dashed #444;
-        border-radius: 6px;
-        opacity: 0.7;
-        padding: 5px;
-    }
-
-    /* Profile pic & menu */
-    .profile-container {
-        position: fixed;
-        top: 10px;
-        left: 10px;
-        z-index: 1000;
-    }
-    .profile-pic {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        cursor: pointer;
-        border: 2px solid #4a4aff;
-    }
-    .popup-menu {
-        display: none;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background: #111;
-        border: 1px solid #444;
-        padding: 10px;
-        border-radius: 6px;
-    }
-    .popup-menu button {
-        display: block;
-        width: 100%;
-        margin-bottom: 5px;
-        color: #eee;
-        background: #222;
-        border: none;
-        cursor: pointer;
-        padding: 5px;
-    }
-    .popup-menu button:hover {
-        background: #333;
-    }
-
-    /* Subcategory page overlay */
-    #subcatPage {
-        display: none;
-        padding: 20px;
-        background:#111;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        color:#eee;
-        z-index: 2000;
-        overflow:auto;
-    }
-    #subcatPage button {
-        background:#222; border:none; padding:5px; color:#eee; cursor:pointer; margin-bottom:10px;
-    }
-    #subcatPage button:hover { background:#333; }
+body {
+    margin:0; background:#0a0a0a; font-family:"Courier New", monospace; color:#e2e2e2;
+}
+/* CRT / retro effect */
+.scanline{position:fixed; inset:0; background:repeating-linear-gradient(to bottom,rgba(255,255,255,0.03)0px,rgba(255,255,255,0.03)1px,transparent 2px);pointer-events:none; z-index:999;}
+.title{width:100%; text-align:center; padding:20px 0; font-size:40px; letter-spacing:10px; font-weight:bold; filter:blur(0.4px); color:#c0c0ff; text-shadow:0 0 6px #4a4aff;}
+.layout{display:grid; grid-template-columns:240px 1fr; height:calc(100vh - 120px);}
+.sidebar{border-right:2px solid #333; padding:15px; overflow-y:auto;}
+.sidebar h2{margin-top:0; font-size:18px;}
+.sidebar a{color:#9ac0ff; text-decoration:none; display:block; margin-bottom:5px; cursor:pointer;}
+.sidebar input,.sidebar button{margin-top:5px;}
+.main{display:grid; grid-template-rows:1fr 1fr; padding:15px;}
+.section{border-bottom:2px solid #333; padding:20px;}
+.section:last-child{border-bottom:none;}
+.section h2{margin-top:0; font-size:20px; color:#9ac0ff;}
+.placeholder-box{width:100%; height:100%; border:2px dashed #444; border-radius:6px; opacity:0.7; padding:5px;}
+/* Profile pic & menu */
+.profile-container{position:fixed; top:10px; left:10px; z-index:1000;}
+.profile-pic{width:50px;height:50px;border-radius:50%;cursor:pointer;border:2px solid #4a4aff;}
+.popup-menu{display:none;position:absolute;top:60px;left:0;background:#111;border:1px solid #444;padding:10px;border-radius:6px;}
+.popup-menu button{display:block;width:100%;margin-bottom:5px;color:#eee;background:#222;border:none;cursor:pointer;padding:5px;}
+.popup-menu button:hover{background:#333;}
+/* Subcategory page overlay */
+#subcatPage{display:none;padding:20px;background:#111;position:fixed;top:0;left:0;width:100%;height:100%;color:#eee;z-index:2000;overflow:auto;}
+#subcatPage button{background:#222;border:none;padding:5px;color:#eee;cursor:pointer;margin-bottom:10px;}
+#subcatPage button:hover{background:#333;}
+/* Settings / Search overlay */
+#settingsOverlay{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:#111;color:#eee;z-index:2000;overflow:auto;padding:20px;}
+#settingsOverlay h2{margin-top:10px;}
+#settingsOverlay button,input,select{margin:5px 0; padding:5px; background:#222; color:#eee; border:none;}
+#settingsOverlay button:hover{background:#333;}
 </style>
 </head>
 <body>
-    <div class="scanline"></div>
-    <div class="title">blackdev</div>
+<div class="scanline"></div>
+<div class="title">blackdev</div>
 
-    <!-- Profile Pic / Popup Menu -->
-    <div class="profile-container">
-        <img src="profile.png" class="profile-pic" id="profilePic">
-        <div class="popup-menu" id="popupMenu">
-            <button id="signInBtn">Sign In</button>
-            <button id="changeUserBtn">Change Username</button>
-            <button id="logoutBtn">Log Out</button>
-            <button id="settingsBtn">Settings</button>
-        </div>
+<!-- Profile menu -->
+<div class="profile-container">
+    <img src="profile.png" class="profile-pic" id="profilePic">
+    <div class="popup-menu" id="popupMenu">
+        <button id="signInBtn">Sign In / Sign Up</button>
+        <button id="changeUserBtn">Change Username</button>
+        <button id="logoutBtn">Log Out</button>
+        <button id="settingsBtn">Settings / Search</button>
+    </div>
+</div>
+
+<!-- Layout -->
+<div class="layout">
+    <div class="sidebar" id="sidebar">
+        <h2>Recents</h2>
+        <div id="recentSubcatsContainer">&lt;— sign in to see recent subcategories</div>
+        <input type="text" placeholder="New subcategory" id="newSubcat">
+        <button id="addSubcatBtn">Add</button>
     </div>
 
-    <!-- Layout -->
-    <div class="layout">
-        <div class="sidebar" id="sidebar">
-            <h2>Recents</h2>
-            <div id="recentSubcatsContainer">&lt;— sign in to see recent subcategories</div>
-            <input type="text" placeholder="New subcategory" id="newSubcat">
-            <button id="addSubcatBtn">Add</button>
+    <div class="main">
+        <div class="section">
+            <h2>Popular Categories</h2>
+            <div class="placeholder-box" id="popularBox">Example: Tech, Art, Games</div>
         </div>
-
-        <div class="main">
-            <div class="section">
-                <h2>Popular Categories</h2>
-                <div class="placeholder-box" id="popularBox">Example: Tech, Art, Games</div>
-            </div>
-            <div class="section">
-                <h2>Recommended</h2>
-                <input type="text" placeholder="Search..." id="searchBar" style="width:100%; padding:5px; margin-bottom:10px;">
-                <div class="placeholder-box" id="recommendedBox">Sign in to see recommended content.</div>
-            </div>
+        <div class="section">
+            <h2>Recommended</h2>
+            <input type="text" placeholder="Search..." id="searchBar" style="width:100%; padding:5px; margin-bottom:10px;">
+            <div class="placeholder-box" id="recommendedBox">Sign in to see recommended content.</div>
         </div>
     </div>
+</div>
 
-    <!-- Subcategory overlay -->
-    <div id="subcatPage">
-        <button id="closeSubcat">← Back</button>
-        <h2 id="subcatTitle"></h2>
-        <div id="subcatContent"></div>
-    </div>
+<!-- Subcategory overlay -->
+<div id="subcatPage">
+    <button id="closeSubcat">← Back</button>
+    <h2 id="subcatTitle"></h2>
+    <div id="subcatContent"></div>
+</div>
 
-    <!-- JS -->
-    <script>
-        const profilePic = document.getElementById('profilePic');
-        const popupMenu = document.getElementById('popupMenu');
-        profilePic.addEventListener('click', () => {
-            popupMenu.style.display = popupMenu.style.display === 'block' ? 'none' : 'block';
+<!-- Settings / Search overlay -->
+<div id="settingsOverlay">
+    <h2>Settings / Top Results</h2>
+    <label>Theme: 
+        <select id="themeSelect">
+            <option value="default">Default</option>
+            <option value="dark">Dark</option>
+            <option value="bright">Bright</option>
+            <option value="custom">Custom</option>
+        </select>
+    </label>
+    <br>
+    <label>CRT: <input type="checkbox" id="crtToggle" checked></label>
+    <h2>Top 5 Subcategories</h2>
+    <div id="topSubcats"></div>
+    <h2>Top 25 Posts</h2>
+    <div id="topPosts"></div>
+    <h2>Top Users</h2>
+    <div id="topUsers"></div>
+    <button id="closeSettings">Close</button>
+</div>
+
+<script>
+// Profile menu toggle
+const profilePic = document.getElementById('profilePic');
+const popupMenu = document.getElementById('popupMenu');
+profilePic.addEventListener('click', ()=>popupMenu.style.display = popupMenu.style.display==='block'?'none':'block');
+
+// Account / admin system
+let users = JSON.parse(localStorage.getItem('users')||"{}");
+let signedInUser = localStorage.getItem('username');
+
+function isAdmin(name){ return name==="cheesethegreatt"; }
+
+function updateContent(){
+    const recentContainer = document.getElementById('recentSubcatsContainer');
+    const recommendedBox = document.getElementById('recommendedBox');
+    if(signedInUser){
+        recommendedBox.style.display='block';
+        let recents = JSON.parse(localStorage.getItem('recentSubcats')||"[]");
+        recentContainer.innerHTML='';
+        recents.forEach(subcat=>{
+            let a = document.createElement('a');
+            a.textContent=subcat; a.href="#"; a.addEventListener('click',()=>enterSubcategory(subcat));
+            recentContainer.appendChild(a);
         });
+    } else {
+        recommendedBox.style.display='none';
+        recentContainer.innerHTML='&lt;— sign in to see recent subcategories';
+    }
+}
+updateContent();
 
-        let signedInUser = localStorage.getItem('username');
-        const sidebar = document.getElementById('sidebar');
-        const recentContainer = document.getElementById('recentSubcatsContainer');
+// Sign In / Sign Up
+document.getElementById('signInBtn').addEventListener('click', ()=>{
+    let name = prompt("Enter username:"); if(!name) return;
+    let pass = prompt("Enter password:"); if(!pass) return;
+    if(!users[name]) users[name]=pass;
+    else if(users[name]!==pass){ alert("Wrong password!"); return; }
+    signedInUser=name; localStorage.setItem('username',name); localStorage.setItem('users',JSON.stringify(users));
+    alert(`Welcome ${name}!`); updateContent();
+});
 
-        function updateContent() {
-            if(signedInUser){
-                document.getElementById('recommendedBox').style.display='block';
-                let recents = JSON.parse(localStorage.getItem('recentSubcats') || "[]");
-                recentContainer.innerHTML = '';
-                recents.forEach(subcat => {
-                    let a = document.createElement('a');
-                    a.textContent = subcat;
-                    a.href = "#";
-                    a.addEventListener('click', ()=>enterSubcategory(subcat));
-                    recentContainer.appendChild(a);
-                });
-            } else {
-                document.getElementById('recommendedBox').style.display='none';
-                recentContainer.innerHTML = '&lt;— sign in to see recent subcategories';
-            }
-        }
+// Change Username
+document.getElementById('changeUserBtn').addEventListener('click', ()=>{
+    if(!signedInUser){ alert("Sign in first!"); return; }
+    let newName=prompt("New username:"); if(!newName) return;
+    users[newName]=users[signedInUser]; delete users[signedInUser];
+    signedInUser=newName; localStorage.setItem('username',newName); localStorage.setItem('users',JSON.stringify(users)); updateContent();
+    alert(`Username changed to ${newName}`);
+});
 
-        document.getElementById('signInBtn').addEventListener('click', () => {
-            const username = prompt("Enter your username:");
-            if(username){
-                signedInUser=username;
-                localStorage.setItem('username', username);
-                alert(`Welcome, ${username}!`);
-                updateContent();
-            }
-        });
+// Logout
+document.getElementById('logoutBtn').addEventListener('click', ()=>{ signedInUser=null; localStorage.removeItem('username'); updateContent(); alert("Logged out"); });
 
-        document.getElementById('changeUserBtn').addEventListener('click', () => {
-            if(!signedInUser) { alert("Sign in first!"); return; }
-            const newName = prompt("Enter new username:");
-            if(newName){
-                signedInUser = newName;
-                localStorage.setItem('username', newName);
-                updateContent();
-                alert(`Username changed to ${newName}`);
-            }
-        });
+// Add Subcategory
+document.getElementById('addSubcatBtn').addEventListener('click', ()=>{
+    if(!signedInUser){ alert("Sign in first!"); return; }
+    let val=document.getElementById('newSubcat').value.trim(); if(!val) return;
+    let recents = JSON.parse(localStorage.getItem('recentSubcats')||"[]"); recents.push(val);
+    localStorage.setItem('recentSubcats',JSON.stringify(recents)); document.getElementById('newSubcat').value=''; updateContent();
+});
 
-        document.getElementById('logoutBtn').addEventListener('click', ()=>{
-            signedInUser = null;
-            localStorage.removeItem('username');
-            updateContent();
-            alert("Logged out");
-        });
+// Subcategory overlay
+const subcatPage=document.getElementById('subcatPage');
+const subcatTitle=document.getElementById('subcatTitle');
+const subcatContent=document.getElementById('subcatContent');
+document.getElementById('closeSubcat').addEventListener('click',()=>subcatPage.style.display='none');
+function enterSubcategory(name){ subcatTitle.textContent=name; subcatContent.innerHTML=`<p>No posts yet in "${name}".</p>`; subcatPage.style.display='block'; }
 
-        document.getElementById('addSubcatBtn').addEventListener('click', ()=>{
-            if(!signedInUser) { alert("Sign in first!"); return; }
-            const val = document.getElementById('newSubcat').value.trim();
-            if(val){
-                let recents = JSON.parse(localStorage.getItem('recentSubcats') || "[]");
-                recents.push(val);
-                localStorage.setItem('recentSubcats', JSON.stringify(recents));
-                document.getElementById('newSubcat').value='';
-                updateContent();
-            }
-        });
+// Settings / Search overlay
+const settingsOverlay=document.getElementById('settingsOverlay');
+document.getElementById('settingsBtn').addEventListener('click',()=>settingsOverlay.style.display='block');
+document.getElementById('closeSettings').addEventListener('click',()=>settingsOverlay.style.display='none');
 
-        // Subcategory page
-        const subcatPage = document.getElementById('subcatPage');
-        const subcatTitle = document.getElementById('subcatTitle');
-        const subcatContent = document.getElementById('subcatContent');
-        const closeSubcat = document.getElementById('closeSubcat');
+// Theme toggle & CRT
+document.getElementById('themeSelect').addEventListener('change',e=>{
+    let val=e.target.value;
+    const body=document.body;
+    if(val==='default'){ body.style.background="#0a0a0a"; body.style.color="#e2e2e2"; }
+    if(val==='dark'){ body.style.background="#111"; body.style.color="#eee"; }
+    if(val==='bright'){ body.style.background="#fff"; body.style.color="#222"; }
+    if(val==='custom'){ let bg=prompt("Enter bg color (#hex or name)"); let c=prompt("Enter text color"); if(bg) body.style.background=bg; if(c) body.style.color=c; }
+});
+document.getElementById('crtToggle').addEventListener('change',e=>document.querySelector('.scanline').style.display=e.target.checked?'block':'none');
 
-        function enterSubcategory(name){
-            subcatTitle.textContent = name;
-            subcatContent.innerHTML = `<p>No posts yet in "${name}".</p>`;
-            subcatPage.style.display='block';
-        }
+// Top results (mock example)
+function updateTopResults(){
+    let topSubcats=document.getElementById('topSubcats'); let topPosts=document.getElementById('topPosts'); let topUsers=document.getElementById('topUsers');
+    let recents = JSON.parse(localStorage.getItem('recentSubcats')||"[]");
+    topSubcats.innerHTML=''; topPosts.innerHTML=''; topUsers.innerHTML='';
+    recents.slice(0,5).forEach(s=>{ let a=document.createElement('a'); a.textContent=s;a.href="#";topSubcats.appendChild(a);});
+    for(let i=0;i<25;i++){ let p=document.createElement('p'); p.textContent=`Post #${i+1}`; topPosts.appendChild(p);}
+    Object.keys(users).forEach(u=>{ let p=document.createElement('p'); p.textContent=u; if(isAdmin(u)) p.textContent+= " (Admin)"; topUsers.appendChild(p);});
+}
+updateTopResults();
 
-        closeSubcat.addEventListener('click', ()=>{
-            subcatPage.style.display='none';
-        });
-
-        updateContent();
-    </script>
+</script>
 </body>
 </html>
-
